# goit-algo2-hw-10

./: README.md  pyproject.toml
src/: task_01.py  task_02.py
